[package]
name = "trapdoor_installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*


[dependencies]
egui = "0.18.1"
eframe = "0.18.0"
egui_extras = "0.18.0"
poll-promise = "0.1"
rfd = "0.9.1"
zip = "0.6.2"
image = "0.24.3"

